--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ChatV2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mongo-java-driver-3.4.0-beta1-sources.jar=C:\\Users\\Michel\\Downloads\\mongo-java-driver-3.4.0-beta1-sources.jar
+file.reference.mongo-java-driver-3.4.0-beta1.jar=C:\\Users\\Michel\\Downloads\\mongo-java-driver-3.4.0-beta1.jar
+file.reference.mongodb-driver-3.4.0-beta1-javadoc.jar=C:\\Users\\Michel\\Downloads\\mongodb-driver-3.4.0-beta1-javadoc.jar
+file.reference.mongodb-driver-3.4.0-beta1-sources.jar=C:\\Users\\Michel\\Downloads\\mongodb-driver-3.4.0-beta1-sources.jar
+file.reference.mongodb-driver-3.4.0-beta1.jar=C:\\Users\\Michel\\Downloads\\mongodb-driver-3.4.0-beta1.jar
 file.reference.mongodb-driver-3.4.2-javadoc.jar=C:\\Users\\Michel\\Downloads\\mongodb-driver-3.4.2-javadoc.jar
+file.reference.mongodb-driver-3.4.2-sources.jar=C:\\Users\\Michel\\Downloads\\mongodb-driver-3.4.2-sources.jar
 file.reference.mongodb-driver-3.4.2.jar=C:\\Users\\Michel\\Downloads\\mongodb-driver-3.4.2.jar
 file.reference.postgresql-42.1.1.jar=C:\\Users\\Michel\\Downloads\\postgresql-42.1.1.jar
 includes=**
@@ -35,7 +41,13 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mongodb-driver-3.4.2-javadoc.jar}:\
     ${file.reference.mongodb-driver-3.4.2.jar}:\
-    ${file.reference.postgresql-42.1.1.jar}
+    ${file.reference.postgresql-42.1.1.jar}:\
+    ${file.reference.mongodb-driver-3.4.2-sources.jar}:\
+    ${file.reference.mongo-java-driver-3.4.0-beta1.jar}:\
+    ${file.reference.mongo-java-driver-3.4.0-beta1-sources.jar}:\
+    ${file.reference.mongodb-driver-3.4.0-beta1-javadoc.jar}:\
+    ${file.reference.mongodb-driver-3.4.0-beta1-sources.jar}:\
+    ${file.reference.mongodb-driver-3.4.0-beta1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +71,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Servidor.ServidorChat
+main.class=BDyGral.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
