--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${file.reference.mongo-java-driver-3.4.0-beta1-sources.jar}:\
     ${file.reference.mongodb-driver-3.4.0-beta1-javadoc.jar}:\
     ${file.reference.mongodb-driver-3.4.0-beta1-sources.jar}:\
-    ${file.reference.mongodb-driver-3.4.0-beta1.jar}
+    ${file.reference.mongodb-driver-3.4.0-beta1.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
